tests/invalid/broken_comments.drs
// Archivo con comentarios no cerrados

despgarcia;

/* Comentario que nunca se cierra
si;
entonces;
mientras;
